# jToxcore

./: .gitignore  .project  Android.md  BUILD.md  CMakeLists.txt  README.md  TODO.md
cmake/Modules/: UseJava.cmake
jni/: CMakeLists.txt  JTox.c  Makefile  callbacks.h  im_tox_jtoxcore_JTox.c
src/: CMakeLists.txt
src/im/tox/jtoxcore/: FriendExistsException.java  FriendList.java  JTox.java  NoSuchFriendException.java  ToxError.java  ToxException.java  ToxFriend.java  ToxFriendList.java  ToxStatus.java  ToxUserStatus.java  ToxWorker.java  package-info.java
src/im/tox/jtoxcore/callbacks/: CallbackHandler.java  OnActionCallback.java  OnConnectionStatusCallback.java  OnFriendRequestCallback.java  OnMessageCallback.java  OnNameChangeCallback.java  OnReadReceiptCallback.java  OnStatusMessageCallback.java  OnUserStatusCallback.java  ToxCallback.java  package-info.java
test/: CMakeLists.txt  Manifest.in
test/im/tox/jtoxcore/test/: JToxTest.java  TestOnActionCallback.java  TestOnConnectionStatusCallback.java  TestOnFriendRequestCallback.java  TestOnMessageCallback.java  TestOnNameChangeCallback.java  TestOnReadReceiptCallback.java  TestOnStatusMessageCallback.java  TestOnUserStatusCallback.java  ToxFriendImpl.java
tools/: astylerc
